essays again yay

--- a/essays/church.html
+++ b/essays/church.html
@@ -212,7 +212,7 @@ actualNumber(_2)    = 2</code></pre>
 
 
       <div id="footer">
-        <p>&copy; 2013-2016. Theme lovingly stolen from other people.</p>
+          <p>&copy; 2013-2016 Gatlin Johnson.</p>
       </div>
 
     </div> <!-- /container -->
