--- a/essays/lists.html
+++ b/essays/lists.html
@@ -230,7 +230,7 @@ Or, how we are ultimately defined by our self-destruction
 
 
       <div id="footer">
-        <p>&copy; 2013-2016. Theme lovingly stolen from other people.</p>
+          <p>&copy; 2013-2016 Gatlin Johnson.</p>
       </div>
 
     </div> <!-- /container -->
