--- a/essays/racket_monad.html
+++ b/essays/racket_monad.html
@@ -286,7 +286,7 @@ list-even?   list-even?   list-even? -- map / unit
 
 
       <div id="footer">
-        <p>&copy; 2013-2016. Theme lovingly stolen from other people.</p>
+          <p>&copy; 2013-2016 Gatlin Johnson.</p>
       </div>
 
     </div> <!-- /container -->
