--- a/essays/recursion.html
+++ b/essays/recursion.html
@@ -260,7 +260,7 @@ Recursion
 
 
       <div id="footer">
-        <p>&copy; 2013-2016. Theme lovingly stolen from other people.</p>
+          <p>&copy; 2013-2016 Gatlin Johnson.</p>
       </div>
 
     </div> <!-- /container -->
