--- a/essays/twittermonad.html
+++ b/essays/twittermonad.html
@@ -311,7 +311,7 @@ shitpost <span class="fu">=</span> runTwitter my_access_keys <span class="fu">$<
 
 
       <div id="footer">
-        <p>&copy; 2013-2016. Theme lovingly stolen from other people.</p>
+          <p>&copy; 2013-2016 Gatlin Johnson.</p>
       </div>
 
     </div> <!-- /container -->
