--- a/essays/booleans.html
+++ b/essays/booleans.html
@@ -154,7 +154,7 @@ Or, On the appreciation of conditional love
 
 
       <div id="footer">
-        <p>&copy; 2013-2016. Theme lovingly stolen from other people.</p>
+          <p>&copy; 2013-2016 Gatlin Johnson.</p>
       </div>
 
     </div> <!-- /container -->
