--- a/essays/static/index.html
+++ b/essays/static/index.html
@@ -179,7 +179,7 @@
       <hr>
 
       <div id="footer">
-        <p>&copy; 2013-2016. Theme lovingly stolen from other people.</p>
+          <p>&copy; 2013-2016 Gatlin Johnson</p>
       </div>
 
     </div> <!-- /container -->
