misc formatting and doge picture is smaller now

--- a/doge.html
+++ b/doge.html
@@ -33,7 +33,7 @@
         </div>
 
       <div id="footer">
-        <p>&copy; 2013-2016 Gatlin Johnson.</p>
+        <p>&copy; 2013-2016 Gatlin Johnson</p>
       </div>
 
     </div> <!-- /container -->
