--- a/doge.html
+++ b/doge.html
@@ -26,7 +26,7 @@
     <div id="main">
         <div id="big-boy">
             <h1>Dogecoin address</h1>
-            <p><img src="img/doge.png" class="img-thumbnail"></p>
+            <p><img src="img/doge.png" id="doge-qr-code"></p>
             <p class="lead">
                 DLATCodc7fFHE1QuaywC9MpyrMfE8ELNk3
             </p>
