--- a/essays/booleans.html
+++ b/essays/booleans.html
@@ -154,10 +154,9 @@ Or, On the appreciation of conditional love
 
 
       <div id="footer">
-          <p>&copy; 2013-2016 Gatlin Johnson.</p>
+          <p>&copy; 2013-2016 Gatlin Johnson</p>
       </div>
 
     </div> <!-- /container -->
-
-  </body>
+      </body>
 </html>
