--- a/essays/church.html
+++ b/essays/church.html
@@ -212,10 +212,9 @@ actualNumber(_2)    = 2</code></pre>
 
 
       <div id="footer">
-          <p>&copy; 2013-2016 Gatlin Johnson.</p>
+          <p>&copy; 2013-2016 Gatlin Johnson</p>
       </div>
 
     </div> <!-- /container -->
-
-  </body>
+      </body>
 </html>
