--- a/essays/lists.html
+++ b/essays/lists.html
@@ -230,10 +230,9 @@ Or, how we are ultimately defined by our self-destruction
 
 
       <div id="footer">
-          <p>&copy; 2013-2016 Gatlin Johnson.</p>
+          <p>&copy; 2013-2016 Gatlin Johnson</p>
       </div>
 
     </div> <!-- /container -->
-
-  </body>
+      </body>
 </html>
