--- a/essays/old.html
+++ b/essays/old.html
@@ -79,10 +79,9 @@ I am old.
 
 
       <div id="footer">
-          <p>&copy; 2013-2016 Gatlin Johnson.</p>
+          <p>&copy; 2013-2016 Gatlin Johnson</p>
       </div>
 
     </div> <!-- /container -->
-
-  </body>
+      </body>
 </html>
