--- a/essays/racket_monad.html
+++ b/essays/racket_monad.html
@@ -286,10 +286,9 @@ list-even?   list-even?   list-even? -- map / unit
 
 
       <div id="footer">
-          <p>&copy; 2013-2016 Gatlin Johnson.</p>
+          <p>&copy; 2013-2016 Gatlin Johnson</p>
       </div>
 
     </div> <!-- /container -->
-
-  </body>
+      </body>
 </html>
