--- a/essays/recursion.html
+++ b/essays/recursion.html
@@ -260,10 +260,9 @@ Recursion
 
 
       <div id="footer">
-          <p>&copy; 2013-2016 Gatlin Johnson.</p>
+          <p>&copy; 2013-2016 Gatlin Johnson</p>
       </div>
 
     </div> <!-- /container -->
-
-  </body>
+      </body>
 </html>
